# fujinet-hal-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  espflash.toml  partitions_singleapp.csv  sdkconfig.defaults  sdkconfig.defaults.001  sdkconfig.defaults.fn
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: esp_log.rs  esp_systime.rs  main.rs
src/logger/: esp.rs  mod.rs
src/platform/: esp.rs  mod.rs
src/systime/: esp.rs  mod.rs
wokwi/: diagram.json  wokwi.toml
