[package]
name = "fujinet-hal-rust"
version = "0.1.0"
authors = ["Mark Fisher <mark.j.fisher@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "fujinet-hal-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
xtensa =  [
    "esp-idf-svc/alloc",
    "esp-idf-svc/binstart",
    "esp-idf-svc/std",
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
    "esp-println/log"
]
xtensa_nightly = ["esp-idf-svc/nightly"]
xtensa_experimental = ["esp-idf-svc/experimental"]
# define as many chip versions as we like here to invoke the correct logging version.
# we can also do special things based on the specific chip here too.
esp32s3 = ["esp-println/esp32s3"]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
bindings_header = "src/bindings.h"

[dependencies]
log = { version = "0.4", default-features = false }
lazy_static = "1.4"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-svc = { version = "0.49", default-features = false }
esp-println = { version = "0.10.0", default-features = true }

[build-dependencies]
embuild = "0.32.0"